# terra_project

./: Cargo.toml  build.rs  data.json  lib.rs  model.rs  models.json  output.txt  weapon.rs
src/: Person.rs  main.rs  unit_builder.rs
templates/: function_template.tera  imports_template.tera  template.tera  unit_builder_function_template.tera
