[package]
name = "terra_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = { version = "1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
rand = "0.8"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = { version = "1", default-features = false }

